# berger

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  berger.example.yaml  deny.toml  docker-compose.yml
.github/workflows/: ci.yml
docs/: PRD-v1.1.md  PRD.md  bichon-setup.md  ops.md  scan.md  webhooks.md  yaml.md
migrations/: V1__initial_schema.sql  V2__add_scan_reports.sql
src/: lib.rs  main.rs
src/actions/: error.rs  imap_target.rs  mod.rs  resolve.rs
src/cli/: db.rs  dry_run.rs  explain.rs  export_thunderbird.rs  mod.rs  run.rs  scan.rs  status.rs
src/config/: error.rs  mod.rs
src/filters/: error.rs  mod.rs
src/ingest/: bichon_client.rs  error.rs  folder_filter.rs  mod.rs  poller.rs  source.rs  types.rs
src/llm/: classifier.rs  error.rs  mod.rs
src/observability/: mod.rs
src/pipeline/: error.rs  mod.rs
src/scan/: address.rs  analyzer.rs  folders.rs  formatter.rs  headers.rs  mod.rs  runner.rs  source.rs  suggester.rs
src/scan/analyzers/: language.rs  lists.rs  mod.rs  newsletters.rs  notifications.rs  senders.rs  spam.rs  subjects.rs  volume.rs
src/storage/: accounts.rs  applied_tags.rs  database.rs  error.rs  executed_actions.rs  filter_matches.rs  llm_decisions.rs  mod.rs  processed_messages.rs  scan_reports.rs  webhook_emissions.rs
src/tags/: mod.rs
src/webhooks/: config.rs  emitter.rs  error.rs  mod.rs  payload.rs
src/webui/: error.rs  mod.rs  queries.rs  server.rs  static_assets.rs  templates.rs
templates/: base.html  config.html  explain.html  index.html  recent.html
tests/: berger_folder_filter.rs  cli_dry_run.rs  cli_explain.rs  cli_export_thunderbird.rs  cli_status.rs  ensure_folder.rs  idempotence.rs  llm_pipeline.rs  scan.rs  webhook_payload.rs
