[package]
name = "berger"
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
authors = ["Michel-Marie Maudet <michel-marie@linagora.com>"]
description = "Open-source email triage daemon, the afew of 2026"
repository = "https://github.com/mmaudet/berger"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
refinery = { version = "0.9.1", features = ["rusqlite"] }
rusqlite = { version = "0.38", features = ["bundled"] }
serde_yaml_ng = "0.10.0"
regex = "1.12.3"
async-imap = { version = "0.11.2", default-features = false, features = ["runtime-tokio", "tokio"] }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "logging", "tls12"] }
futures-util = "0.3.32"

[dev-dependencies]
testcontainers = "0.27.3"
tokio = { version = "1", features = ["net"] }
wiremock = "0.6"
